# mb-dual-dan

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
data/winding_2023/: README.md
experiments/: 00_load_connectome.py  01_rpe_baseline.py  02_aif_agent.py  03_novel_odor.py  04_compartments.py  05_extinction.py  06_latent_inhibition.py  07_reversal.py  08_robustness.py
paper/: PREREGISTRATION.md  manuscript.md  preprint.css
paper/figures/: fig1_substrate.py  fig2_rpe.py  fig3_novel_odor.py  fig4_latent_inhibition.py  fig5_reversal.py
src/brain/: __init__.py  robustness.py
src/brain/connectome/: __init__.py  compartments.py  loader.py  mb_extract.py  nt_signs.py
src/brain/models/: aif_agent.py  dual_dan.py  dual_valence.py  rpe_baseline.py  shared.py
src/brain/tasks/: conditioning.py  latent_inhibition.py  novel_odor.py
src/mb_dual_dan/: __init__.py
src/mb_dual_dan/connectome/: __init__.py  compartments.py  loader.py  mb_extract.py  nt_signs.py  valence.py
src/mb_dual_dan/models/: aif_agent.py  dual_dan.py  dual_valence.py  rpe_baseline.py  shared.py
src/mb_dual_dan/tasks/: conditioning.py  latent_inhibition.py  novel_odor.py
tests/: test_aif.py  test_compartments.py  test_connectome.py  test_dual_dan.py  test_dual_valence.py  test_extinction.py  test_novel.py  test_reversal.py  test_robustness.py  test_rpe.py
