[project]
name = "brain"
version = "0.1.0"
description = "Mushroom body as active inference: connectome-grounded AIF agent on larval Drosophila"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "pandas>=2.2",
    "pyarrow>=15",
    "networkx>=3.3",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "tqdm>=4.66",
    "jax[cpu]>=0.4.30",
    "inferactively-pymdp>=0.0.7",
    "brian2>=2.7",
    "requests>=2.32",
    "ipykernel>=6.29",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "pyright>=1.1",
    "weasyprint>=68.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brain"]

[tool.ruff]
line-length = 100
target-version = "py312"
